<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".helperlangage.Langage">

    <TextView
        android:id="@+id/tv_langue_msgaccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choisir_langue" />

    <RadioGroup
        android:id="@+id/rggroup_langue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_langue_francais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/francais" />

        <RadioButton
            android:id="@+id/rb_langue_anglais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/anglais" />

    </RadioGroup>
<Button
    android:id="@+id/bt_langue_confirmer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/confirme"/>

</LinearLayout>