<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="#DAFFF6"
        android:orientation="vertical">


        <Button
            android:id="@+id/Bt_Main_ListeAvecMap"
            android:layout_width="@dimen/largeurBoutton"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/ButtonBackground"
            android:text="@string/titrechoix_des_listes"

            android:textColor="@color/background_gradient_end" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/Bt_Main_Jeu"
            android:layout_width="@dimen/largeurBoutton"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/ButtonBackground"

            android:text="@string/titrejeu"

            android:textColor="@color/background_gradient_end" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/Bt_Main_Ajouter_item"
            android:layout_width="@dimen/largeurBoutton"

            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/ButtonBackground"
            android:text="@string/titreajouter_un_lieux"
            android:textColor="@color/background_gradient_end" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/Bt_Main_firebase"
            android:layout_width="@dimen/largeurBoutton"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/ButtonBackground"
            android:text="@string/titrefirebase"
            android:textColor="@color/background_gradient_end" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/Bt_Main_langue"
            android:layout_width="@dimen/largeurBoutton"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/ButtonBackground"

            android:text="@string/titrelangue"
            android:textColor="@color/background_gradient_end" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/Bt_Main_swipStack"
            android:layout_width="@dimen/largeurBoutton"
            android:layout_height="wrap_content"

            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/ButtonBackground"
            android:text="swipStackimg"
            android:textColor="@color/background_gradient_end" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>